--- a/views/login.tt
+++ b/views/login.tt
@@ -190,7 +190,7 @@
                         [% END %]
                         [% IF site.register_show_department %]
                             <div class="form-group">
-                                <label for="department">[% site.register_department_name | html %]:
+                                <label for="department">[% site.department_name | html %]:
                                     [% IF site.register_department_help %]
                                         <span style="font-weight:normal !important">[% site.register_department_help | html %]</span>
                                     [% END %]
@@ -199,6 +199,21 @@
                                     <option></option>
                                     [% FOREACH department IN departments %]
                                         <option value="[% department.id %]">[% department.name | html_entity %]</option>
+                                    [% END %]
+                                </select>
+                            </div>
+                        [% END %]
+                        [% IF site.register_show_team %]
+                            <div class="form-group">
+                                <label for="team">[% site.team_name | html %]:
+                                    [% IF site.register_team_help %]
+                                        <span style="font-weight:normal !important">[% site.register_team_help | html %]</span>
+                                    [% END %]
+                                </label>
+                                <select class="form-control" id="team" name="team">
+                                    <option></option>
+                                    [% FOREACH team IN teams %]
+                                        <option value="[% team.id %]">[% team.name | html_entity %]</option>
                                     [% END %]
                                 </select>
                             </div>
