--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -35,7 +35,7 @@
         [% FOREACH record IN records %]
         <tr>
             [% FOREACH column IN record.columns %]
-                [% IF loop.first %]
+                [% IF loop.first AND column.name_short == "_id" %]
                     <td>
                         [% IF record.parent_id %]<span title="Child record with parent record [% record.parent_id %]">[% record.parent_id %] &#8594;</span>[% END %]
                         <a href="/record/[% record.current_id %]">[% record.current_id %]</a>
