--- a/views/view.tt
+++ b/views/view.tt
@@ -98,6 +98,7 @@
             <label>Filters:</label>
             <div id="builder"></div>
             <input id="filter" type="hidden" name="filter" value="[% view_edit.filter.as_json | html_entity %]">
+
             <label for="sorts">Sort the records in your view by:</label>
             <div id="sorts">
                 [% FOREACH sort IN view_edit.sorts %]
@@ -107,6 +108,20 @@
                         <div class="col-md-11">
                             <button type="button" class="btn btn-default add">
                                 Add new sort
+                            </button>
+                        </div>
+                </div>
+            </div>
+
+            <label for="groups">Group the records in your view by:</label>
+            <div id="groups">
+                [% FOREACH group IN view_edit.groups %]
+                    [% PROCESS grouprow %]
+                [% END %]
+                <div class="group-add">
+                        <div class="col-md-11">
+                            <button type="button" class="btn btn-default add">
+                                Add new grouping
                             </button>
                         </div>
                 </div>
@@ -174,6 +189,17 @@
                     [% PROCESS sortrow %]
                 ' );
             });
+
+            $('div#groups').on('click','.closeme', function(){
+                var c = $(".request-row").length;
+                if (c < 1) return;
+                $(this).parents('.request-row').remove();
+            });
+            $('div#groups').on('click','.add', function(){
+                $(this).parents('.group-add').before( '
+                    [% PROCESS grouprow %]
+                ' );
+            });
         }); 
         [% INCLUDE builder.tt builder_layout = layout filter_normal = view_edit.filter filter_base64 = view_edit.filter.base64 %]
         [% IF view_edit.filter.as_json AND NOT view_edit.filter.as_json.match('^[{}\s]*$') %]
@@ -208,6 +234,24 @@
                     <select class="form-control" name="sorttype">
                         [% FOREACH st IN sort_types %]
                             <option value="[% st.name %]" [% IF sort.type == st.name %]selected[% END %]>[% st.description %]</option>
+                        [% END %]
+                    </select>
+                </p>
+            </div>
+            <button type="button" class="close closeme pull-left">&times;</button>
+        </div>
+    </div>
+[% END %]
+
+[% BLOCK grouprow %]
+    <div class="row">
+        <div class="request-row">
+            <div class="col-md-8">
+                <p>
+                    <select class="form-control" name="groupfield">
+                        <option value="" [% UNLESS group.column.id %]selected[% END %]>ID</option>
+                        [% FOR column IN layout.columns_for_filter %]
+                            <option value="[% column.filter_id %]" [% IF group.filter_id == column.filter_id %]selected[% END %]>[% column.filter_name | html_entity %]</option>
                         [% END %]
                     </select>
                 </p>
