--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -33,21 +33,28 @@
     </thead>
     <tbody>
         [% FOREACH record IN records %]
-        <tr>
-            [% FOREACH column IN record.columns %]
-                [% IF loop.first AND column.is_id %]
-                    <td>
-                        [% IF record.parent_id %]<span title="Child record with parent record [% record.parent_id %]">[% record.parent_id %] &#8594;</span>[% END %]
-                        <a href="/record/[% record.current_id %]">[% record.current_id %]</a>
-                        [% IF user_can_edit AND NOT session.rewind %]
-                            (<a href="/edit/[% record.current_id %]">Edit</a>)
-                        [% END %]
-                    </td>
-                [% ELSE %]
+            <tr>
+                [% FOREACH column IN record.columns %]
+                    [% IF loop.first AND column.is_id %]
+                        <td>
+                            [% IF record.parent_id %]<span title="Child record with parent record [% record.parent_id %]">[% record.parent_id %] &#8594;</span>[% END %]
+                            <a href="/record/[% record.current_id %]">[% record.current_id %]</a>
+                            [% IF user_can_edit AND NOT session.rewind %]
+                                (<a href="/edit/[% record.current_id %]">Edit</a>)
+                            [% END %]
+                        </td>
+                    [% ELSE %]
+                        <td class="[% column.type %]">[% render_datum(column) %]</td>
+                    [% END %]
+                [% END %]
+            </tr>
+        [% END %]
+        [% IF aggregate %]
+            <tr class="info">
+                [% FOREACH column IN aggregate.columns %]
                     <td class="[% column.type %]">[% render_datum(column) %]</td>
                 [% END %]
-            [% END %]
-        </tr>
+            </tr>
         [% END %]
     </tbody>
 </table>
