--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -87,7 +87,9 @@
 
 [% MACRO render_rag_datum(rag) BLOCK %]
     [% grade = rag.grade %]
-    <span aria-labelledby="rag_[% grade %]_meaning" class="[% grade %]">[% rag_symbols.$grade %]</span>
+    [% IF grade %]
+        <span aria-labelledby="rag_[% grade %]_meaning" class="[% grade %]">[% rag_symbols.$grade %]</span>
+    [% END %]
 [% END %]
 
 [% MACRO render_datum(datum, full_content) BLOCK;
