--- a/views/edit.tt
+++ b/views/edit.tt
@@ -27,7 +27,8 @@
 <p></p>
 
 [% BLOCK panel_start %]
-    [% IF !col.topic OR col.topic.initial_state == 'open' %]
+    [% topic = col.column.topic %]
+    [% IF !topic OR topic.initial_state == 'open' %]
         [% open = 1 %]
     [% ELSE %]
         [% open = 0 %]
@@ -39,27 +40,27 @@
                     <a role="button" data-toggle="collapse" data-parent="#accordion[% col.id %]"
                         href="#topic[% col.id %]" aria-expanded="[% IF open %]true[% ELSE %]false[% END %]"
                         aria-controls="topic[% col.id %]">
-                        [% col.topic.name OR 'Other' | html %]
+                        [% topic.name OR 'Other' | html %]
                     </a>
                 </h4>
             </div>
             <div id="topic[% col.id %]" class="panel-collapse collapse[% IF open %] in[% END %]" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                    [% IF col.topic.need_completed_topics_count %]
+                    [% IF topic.need_completed_topics_count %]
                         <div role="alert" class="alert alert-warning">
                             Fields in this section cannot be completed until mandatory fields
-                            in the [% col.topic.need_completed_topics_as_string | html %]
-                            section[% IF col.topic.need_completed_topics_count > 1 %]s[% END %]
+                            in the [% topic.need_completed_topics_as_string | html %]
+                            section[% IF topic.need_completed_topics_count > 1 %]s[% END %]
                             have been completed.
                         </div>
                     [% END %]
-                    [% IF col.topic.description %]
-                        <div role="alert" class="alert alert-info">[% col.topic.description | html %]</div>
+                    [% IF topic.description %]
+                        <div role="alert" class="alert alert-info">[% topic.description | html %]</div>
                     [% END %]
-                [% IF col.topic.click_to_edit AND NOT record.new_entry %]
+                [% IF topic.click_to_edit AND NOT record.new_entry %]
                     [% click_to_edit = 1 %]
                     <button class="btn btn-default pull-right click-to-edit" type="button" aria-expanded="false">Edit</button>
-                    <div id="topic_forms[% col.topic_id %]" class="expandable">
+                    <div id="topic_forms[% topic_id %]" class="expandable">
                 [% ELSE %]
                     [% click_to_edit = 0 %]
                 [% END %]
@@ -129,9 +130,9 @@
             [% columns_done = {} %]
             [% click_to_edits = [] %]
 
-            [% FOREACH col IN all_columns %]
+            [% FOREACH col IN record_presentation.columns %]
                 [% IF layout_edit.has_topics %]
-                    [% IF col.topic.id != previous_topic %]
+                    [% IF col.column.topic.id != previous_topic %]
                         [% IF in_panel %]
                             [% PROCESS panel_end %]
                             [% in_panel = 0 %]
@@ -144,7 +145,7 @@
                 [% IF click_to_edit %]
                     [% click_to_edits.push(col) %]
                 [% END %]
-                [% previous_topic = col.topic.id %]
+                [% previous_topic = col.column.topic.id %]
             [% END %]
             [% IF layout_edit.has_topics %]
                 [% PROCESS panel_end %]
@@ -626,12 +627,7 @@
 
     [% editvalue = value.value %]
 
-    [% IF (
-              (record.current_id AND !dispcol.user_can("write_existing"))
-              OR (!record.current_id AND !dispcol.user_can("write_new"))
-          )
-       AND page != "approval"
-    %]
+    [% IF dispcol.readonly  AND page != "approval" %]
         [% readonly = "readonly" %]
     [% ELSE %]
         [% readonly = "" %]
@@ -863,7 +859,7 @@
     [%# First display the actual column, only if it doesn't depend on others,
         or it's meant to be displayed because we're within the parent %]
     [% IF !columns_done.$cid %]
-        [% dispcol = col %]
+        [% dispcol = col.column %]
         [% PROCESS showcol %]
     [% END %]
 
