--- a/views/layout.tt
+++ b/views/layout.tt
@@ -84,13 +84,6 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="aggregate">Aggregate for field in table view:</label>
-        <select class="form-control" id="aggregate" name="aggregate">
-            <option value="" [% IF NOT column.aggregate %]selected[% END %]>&lt;no aggregate&gt;</option>
-            <option value="sum" [% IF column.aggregate == "sum" %]selected[% END %]>Sum</option>
-        </select>
-    </div>
-    <div class="form-group">
         <label for="link_parent_id">Link to a field in another table:</label>
         [% IF instance_layouts.size %]
             <select class="form-control" id="link_parent_id" name="link_parent_id">
@@ -684,7 +677,7 @@
                 });
 
                 [% FOREACH instance_layout IN instance_layouts %]
-                    [% PROCESS builder.tt builder_id = instance_layout.instance_id builder_layout = instance_layout filter_normal = column.filter filter_base64 = column.filter.base64 %]
+                    [% PROCESS builder.tt builder_id = instance_layout.instance_id builder_layout = instance_layout filter_normal = column.filter filter_base64 = column.filter.base64 override_permissions = 1 %]
                 [% END %]
                 [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') %]
                     var data = base64.decode('[% column.filter.base64 %]');
