Do not show aggregate row for no rows

--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -74,7 +74,7 @@
                 [% END %]
             </tr>
         [% END %]
-        [% IF aggregate %]
+        [% IF aggregate AND count %]
             <tr class="info">
                 <td></td>
                 [% FOREACH column IN aggregate.columns %]
