--- a/sass/_data-table.scss
+++ b/sass/_data-table.scss
@@ -134,6 +134,11 @@
     }
 }
 
+.data-table thead th:last-child .popover {
+    left: auto !important;
+    right: 8px !important; /* Overwrite the custom inline style as applied by positionDisclosure(). */
+}
+
 .data-table thead .helptext {
     padding-top: 1em;
 }
