Do not show filter search for RAG fields

--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -33,14 +33,16 @@
                             [% IF col.has_filter %]
                                 <a class="column-filter__clear" href="?[% col.url_filter_remove %]">Clear filter</a>
                             [% END %]
-                            <div class="column-filter__search">
-                                <input class="column-filter__search-input" type="text" name="q" placeholder="Search..." autocomplete="off" aria-controls="column-filter__values_[% col.id %]" value="[% col.filter_text | html %]" />
-                                <a href="#" class="column-filter__clear-search-input fa fa-times" title="Clear search input" hidden></a>
-                            </div>
-                            <p class="column-filter__spinner" hidden>
-                                Searching... <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
-                            </p>
-                            <p class="column-filter__error alert alert-danger" hidden></p>
+                            [% IF col.has_filter_search %]
+                                <div class="column-filter__search">
+                                    <input class="column-filter__search-input" type="text" name="q" placeholder="Search..." autocomplete="off" aria-controls="column-filter__values_[% col.id %]" value="[% col.filter_text | html %]" />
+                                    <a href="#" class="column-filter__clear-search-input fa fa-times" title="Clear search input" hidden></a>
+                                </div>
+                                <p class="column-filter__spinner" hidden>
+                                    Searching... <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+                                </p>
+                                <p class="column-filter__error alert alert-danger" hidden></p>
+                            [% END %]
                             <ul class="column-filter__values" id="column-filter__values_[% col.id %]" aria-label="Filters"></ul>
                             <div class="column-filter__buttons">
                                 <button class="column-filter__button column-filter__submit btn btn-xs btn-default" type="submit">Go</a>
